[package]
name = "arkworks-keccak"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.4"
ark-ff = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-std = "0.4"
bitvec = "1.0.1"
hex = "0.4.3"
proptest = "1.6.0"
sha3 = "0.10.8"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
tracing = "0.1.41"
tracing-subscriber = "0.2"

